# ComfyUI-ColoredNoiseDiffusionSampling

./: .comfyignore  .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
gamma_matrices/: SOURCE.md  gamma_matrix_scaled_cfg_1.5.pt
src/: _log.py  extension.py
src/engine/: colored_noise.py  schedule.py  spectral.py
src/nodes/: ksampler.py  noise.py  sampler_select.py
src/sampling/: colored_ksampler.py  initial_noise.py  registry.py
tests/: conftest.py  pytest.ini  test_colored_noise.py  test_initial_noise.py  test_integration.py  test_logging.py  test_nodes.py  test_registry.py  test_schedule.py  test_spectral.py
